--- a/src/scss/components/_CardSlider.scss
+++ b/src/scss/components/_CardSlider.scss
@@ -1,63 +1,29 @@
-// .cardSliderContainer {
-//   max-width: 2300px;
-// }
+@use "../abstracts/colors" as c;
 
-.card {
-  color: black;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  width: 380px;
-  height: 620px;
-  border-radius: 12px;
-  padding: 16px 0 38px 0;
-  margin: 0 12px;
+.cardSlider {
+  h1 {
+    margin-bottom: 40px;
+  }
 }
 
-.cardContent {
+.cardSlider-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 380px;
-  height: 620px;
-  border-radius: 12px;
-  &__title {
-    margin: 8px 0 20px 0;
-    font-size: 32px;
-    font-weight: 500;
-  }
-  &__body {
-    width: 80%;
-  }
-  &__img {
-    object-fit: cover;
-    width: 95%;
-    border-top: 1px solid black;
-    position: relative;
-    &::after {
-      width: 12px;
-      height: 12px;
-      background: red;
-      position: absolute;
-      display: inline-block;
-      top: 0;
-      left: 50%;
-      content: "";
-      inset: 0;
+  gap: 24px;
+
+  .card-item {
+    background-color: c.$bg-color;
+    width: 400px;
+    text-align: left;
+    img {
+      width: 100%;
+      object-fit: contain;
     }
-  }
-}
-
-.cardLink {
-  &__cta-btn {
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-    border: 2px solid black;
-    border-radius: 8px;
-    padding: 16px 32px;
-    display: inline-block;
+    h4 {
+      padding: 24px 0;
+      border-bottom: 1px solid black;
+    }
+    p {
+      margin-top: 20px;
+    }
   }
 }
