--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -1086,6 +1086,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  padding: 0 24px;
 }
 .seeAndDo-highlight-section__img img {
   width: 100%;
