--- a/src/scss/pages/_Accommodation.scss
+++ b/src/scss/pages/_Accommodation.scss
@@ -7,6 +7,7 @@
   align-items: center;
   width: 100%;
   background: c.$bg-color;
+  margin-top: l.$header-margin;
   &-container {
     max-width: 1440px;
     text-align: center;
