--- a/src/scss/pages/_ClassicCollection.scss
+++ b/src/scss/pages/_ClassicCollection.scss
@@ -3,6 +3,8 @@
 
 .classic-collection-page {
   width: 100%;
+  margin-top: l.$header-margin;
+
   background-color: c.$bg-color;
   .classic-collection-container {
     margin: 0 auto;
