--- a/src/scss/pages/_DeluxeCollection.scss
+++ b/src/scss/pages/_DeluxeCollection.scss
@@ -4,6 +4,8 @@
 .deluxe-collection-page {
   width: 100%;
   background-color: c.$bg-color;
+  margin-top: l.$header-margin;
+
   .deluxe-collection-container {
     margin: 0 auto;
     max-width: 1440px;
