--- a/src/scss/pages/_SuiteCollection.scss
+++ b/src/scss/pages/_SuiteCollection.scss
@@ -4,6 +4,8 @@
 .suite-collection-page {
   width: 100%;
   background-color: c.$bg-color;
+  margin-top: l.$header-margin;
+
   .suite-collection-container {
     margin: 0 auto;
     max-width: 1440px;
