--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -23,6 +23,7 @@
 @use "./components/CarouselB";
 @use "./components/CarouselC";
 @use "./components/RestaurantCard";
+@use "./components/TileCard";
 
 // Abstracts
 @use "./abstracts/colors";
