--- a/src/scss/abstracts/_typography.scss
+++ b/src/scss/abstracts/_typography.scss
@@ -37,10 +37,20 @@
   font-size: 16px;
   line-height: 36px;
 }
+
 .typo-b3 {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
+}
+
+.typo-b4 {
+  text-align: center;
+  font-family: Poppins;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 42.289px; /* 151.031% */
 }
 
 .typo-link {
