--- a/src/scss/components/_HighlightA.scss
+++ b/src/scss/components/_HighlightA.scss
@@ -26,12 +26,10 @@
     }
   }
   &-img {
-    width: 100%;
-    // height: 100%;
-
+    width: 65%;
     img {
-      height: 100%;
-      width: auto;
+      width: 100%;
+      // width: auto;
       border-radius: 12px;
       object-fit: cover;
     }
