--- a/src/scss/pages/_Accommodation.scss
+++ b/src/scss/pages/_Accommodation.scss
@@ -22,6 +22,7 @@
 // ! globally applied
 .paragraph {
   max-width: 1164px;
+  padding: 0 24px;
 }
 
 .accommodation-introA-section {
@@ -31,6 +32,10 @@
   align-items: center;
   .introA-imgContainer {
     margin: l.$component-margin 0;
+    img {
+      width: 100%;
+      object-fit: contain;
+    }
   }
   button {
     margin-top: 40px;
