--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -56,7 +56,7 @@
   position: absolute;
   width: 1000px;
   height: 1000px;
-  background-color: rgb(248, 252, 205);
+  background-color: rgb(245, 248, 214);
   border-radius: 50%;
   filter: blur(100px) opacity(0.7);
 }
@@ -71,7 +71,7 @@
   position: absolute;
   width: 1000px;
   height: 1000px;
-  background-color: rgb(248, 252, 205);
+  background-color: rgb(237, 248, 213);
   border-radius: 50%;
   filter: blur(100px) opacity(0.7);
 }
@@ -128,28 +128,69 @@
   }
 }
 .homeHeroSection {
+  border-bottom: 1px solid black;
+}
+.homeHeroSection-container {
+  max-width: 1440px;
+  margin: 0 auto;
+  min-height: 1000px;
+  padding: 48px 24px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
-  border-bottom: 1px solid black;
-  padding: 80px;
+  justify-content: space-between;
+  position: relative;
 }
-.homeHeroSection h2 {
-  max-width: 1080px;
-  margin: 80px 0;
+.homeHeroSection-container .homeHeroSection-body1 {
+  max-width: 470px;
+  align-self: flex-end;
 }
-.homeHeroSection p {
-  max-width: 1080px;
+.homeHeroSection-container .homeHeroSection-body1 h2 {
+  opacity: 0;
+  margin-bottom: 12px;
+  animation: fade-in 2000ms forwards;
+  animation-delay: 500ms;
 }
-.homeHeroSection button {
-  margin: 80px 0;
+.homeHeroSection-container .homeHeroSection-body1 p {
+  opacity: 0;
+  animation: fade-in 2000ms forwards;
+  animation-delay: 2000ms;
 }
-.homeHeroSection img {
-  display: block;
-  width: 40px;
+.homeHeroSection-container .homeHeroSection-body2 {
+  max-width: 790px;
+}
+.homeHeroSection-container .homeHeroSection-body2 h2 {
+  opacity: 0;
+  margin-bottom: 12px;
+  animation: fade-in 2000ms forwards;
+  animation-delay: 500ms;
+}
+.homeHeroSection-container .homeHeroSection-body2 p {
+  opacity: 0;
+  animation: fade-in 2000ms forwards;
+  animation-delay: 2000ms;
+}
+.homeHeroSection-container .homeHeroSection-heroStar {
+  position: absolute;
+  max-width: 380px;
+  max-height: 380px;
+  left: calc(50% - 190px);
+  bottom: calc(50% - 190px);
+}
+.homeHeroSection-container .homeHeroSection-heroStar img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .homeServiceSection {
   display: flex;
   justify-content: center;
@@ -183,8 +224,29 @@
   width: 100%;
   padding: 140px 24px;
   background-color: #211f1a;
+  background-image: url(../Images/parralexSection-background.svg);
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-position: bottom;
+}
+.parallaxSection .stardust-container {
+  width: 300px;
+}
+.parallaxSection .stardust-container img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  animation: lighten 100ms infinite;
 }
 
+@keyframes lighten {
+  0% {
+    filter: opacity(0.6);
+  }
+  100% {
+    filter: opacity(1);
+  }
+}
 .welcomeMsg {
   max-width: 1440px;
   padding: 80px 44px;
@@ -463,6 +525,7 @@
 
 .seeAndDo-cardSliderA-section {
   margin-top: 120px;
+  width: 100%;
 }
 
 .seeAndDo-highlight-section {
@@ -516,8 +579,16 @@
 .seeAndDo-cardSliderB-section .cardSliderB-container {
   max-width: 1440px;
 }
-.seeAndDo-cardSliderB-section .cardSliderB-container h1 {
+.seeAndDo-cardSliderB-section .cardSliderB-container h1,
+.seeAndDo-cardSliderB-section .cardSliderB-container h4,
+.seeAndDo-cardSliderB-section .cardSliderB-container .typo-link {
   color: #7feb38;
+}
+.seeAndDo-cardSliderB-section .cardSliderB-container h1 {
+  text-align: center;
+}
+.seeAndDo-cardSliderB-section .cardSliderB-container .typo-b3 {
+  color: white;
 }
 
 .classic-collection-page {
@@ -932,91 +1003,26 @@ header {
   transition: all 0.5s cubic-bezier(1, 0, 1, 0);
 }
 
-@keyframes slideRight {
-  from {
-    left: 0;
-  }
-  to {
-    left: -50%;
-  }
-}
-.cardSlider h1 {
-  margin-bottom: 40px;
-  text-align: center;
-}
-
-.cardSlider-wrapper {
-  display: flex;
-  position: relative;
-  width: 100%;
-}
-.cardSlider-wrapper .card-controller-left {
-  position: absolute;
-  background-color: red;
-  opacity: 0.2;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 40%;
-  z-index: 10;
-}
-.cardSlider-wrapper .card-controller-right {
-  position: absolute;
-  background-color: red;
-  opacity: 0.2;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 40%;
-  z-index: 10;
-}
-
 .cardSlider-container {
-  display: flex;
-  justify-content: flex-start;
   width: 100%;
-  overflow-x: hidden;
-  gap: 24px;
-  position: relative;
-  transition: 100ms;
 }
-.cardSlider-container .center {
-  display: flex;
+
+swiper-container {
+  cursor: grab;
 }
-.cardSlider-container .card-controller-left {
-  position: absolute;
-  background-color: red;
-  opacity: 0.2;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 40%;
-}
-.cardSlider-container .card-controller-right {
-  position: absolute;
-  background-color: red;
-  opacity: 0.2;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 40%;
-}
-.cardSlider-container .card-item {
-  background-color: #fffcfa;
-  min-width: 400px;
+
+.card-item {
   text-align: left;
+  max-width: 400px;
 }
-.cardSlider-container .card-item img {
-  width: 100%;
+.card-item img {
   -o-object-fit: contain;
      object-fit: contain;
 }
-.cardSlider-container .card-item h4 {
-  padding: 24px 0;
+.card-item h4 {
+  margin: 0;
+  padding: 16px 0;
   border-bottom: 1px solid black;
-}
-.cardSlider-container .card-item p {
-  margin-top: 20px;
 }
 
 @keyframes slide {
@@ -1293,6 +1299,9 @@ header {
 .carouselB-contentContainer .carouselB-content-title {
   min-width: 380px;
   padding-right: 24px;
+}
+.carouselB-contentContainer .carouselB-content-title .typo-h2 {
+  margin: 0;
 }
 .carouselB-contentContainer .carouselB-content-body {
   max-width: 400px;
