--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -63,7 +63,7 @@ $mobile-view: 1060px;
       position: absolute;
       width: 1000px;
       height: 1000px;
-      background-color: rgb(248, 252, 205);
+      background-color: rgb(245, 248, 214);
       border-radius: 50%;
       filter: blur(100px) opacity(0.7);
     }
@@ -79,7 +79,7 @@ $mobile-view: 1060px;
       position: absolute;
       width: 1000px;
       height: 1000px;
-      background-color: rgb(248, 252, 205);
+      background-color: rgb(237, 248, 213);
       border-radius: 50%;
       filter: blur(100px) opacity(0.7);
     }
@@ -141,26 +141,66 @@ $mobile-view: 1060px;
 }
 
 .homeHeroSection {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
   border-bottom: 1px solid black;
-  padding: 80px;
+  &-container {
+    max-width: 1440px;
+    margin: 0 auto;
+    min-height: 1000px;
+    padding: 48px 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    .homeHeroSection-body1 {
+      max-width: 470px;
+      align-self: flex-end;
+      h2 {
+        opacity: 0;
+        margin-bottom: 12px;
+        animation: fade-in 2000ms forwards;
+        animation-delay: 500ms;
+      }
+      p {
+        opacity: 0;
+        animation: fade-in 2000ms forwards;
+        animation-delay: 2000ms;
+      }
+    }
+    .homeHeroSection-body2 {
+      max-width: 790px;
+      h2 {
+        opacity: 0;
+        margin-bottom: 12px;
+        animation: fade-in 2000ms forwards;
+        animation-delay: 500ms;
+      }
+      p {
+        opacity: 0;
+        animation: fade-in 2000ms forwards;
+        animation-delay: 2000ms;
+      }
+    }
+    .homeHeroSection-heroStar {
+      position: absolute;
+      max-width: 380px;
+      max-height: 380px;
+      left: calc(50% - 380px / 2);
+      bottom: calc(50% - 380px / 2);
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+  }
+}
 
-  h2 {
-    max-width: 1080px;
-    margin: 80px 0;
+@keyframes fade-in {
+  0% {
+    opacity: 0;
   }
-  p {
-    max-width: 1080px;
-  }
-  button {
-    margin: 80px 0;
-  }
-  img {
-    display: block;
-    width: 40px;
+  100% {
+    opacity: 1;
   }
 }
 
@@ -198,6 +238,26 @@ $mobile-view: 1060px;
   width: 100%;
   padding: 140px 24px;
   background-color: c.$black-theme;
+  background-image: url(../Images/parralexSection-background.svg);
+  object-fit: cover;
+  background-position: bottom;
+  .stardust-container {
+    width: 300px;
+    img {
+      width: 100%;
+      object-fit: contain;
+      animation: lighten 100ms infinite;
+    }
+  }
+}
+
+@keyframes lighten {
+  0% {
+    filter: opacity(0.6);
+  }
+  100% {
+    filter: opacity(1);
+  }
 }
 
 .welcomeMsg {
