--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -145,12 +145,14 @@
   align-self: flex-end;
 }
 .homeHeroSection-container .homeHeroSection-body1 h2 {
+  position: relative;
   opacity: 0;
   margin-bottom: 12px;
   animation: fade-in 2000ms forwards;
   animation-delay: 500ms;
 }
 .homeHeroSection-container .homeHeroSection-body1 p {
+  position: relative;
   opacity: 0;
   animation: fade-in 2000ms forwards;
   animation-delay: 2000ms;
@@ -159,12 +161,14 @@
   max-width: 790px;
 }
 .homeHeroSection-container .homeHeroSection-body2 h2 {
+  position: relative;
   opacity: 0;
   margin-bottom: 12px;
   animation: fade-in 2000ms forwards;
   animation-delay: 500ms;
 }
 .homeHeroSection-container .homeHeroSection-body2 p {
+  position: relative;
   opacity: 0;
   animation: fade-in 2000ms forwards;
   animation-delay: 2000ms;
@@ -186,9 +190,11 @@
 @keyframes fade-in {
   0% {
     opacity: 0;
+    top: 30px;
   }
   100% {
     opacity: 1;
+    top: 0;
   }
 }
 .homeServiceSection {
@@ -223,30 +229,12 @@
   background-color: #fffcfa;
   width: 100%;
   padding: 140px 24px;
-  background-color: #211f1a;
-  background-image: url(../Images/parralexSection-background.svg);
   -o-object-fit: cover;
      object-fit: cover;
   background-position: bottom;
-}
-.parallaxSection .stardust-container {
-  width: 300px;
-}
-.parallaxSection .stardust-container img {
-  width: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
-  animation: lighten 100ms infinite;
+  transition: 1500ms;
 }
 
-@keyframes lighten {
-  0% {
-    filter: opacity(0.6);
-  }
-  100% {
-    filter: opacity(1);
-  }
-}
 .welcomeMsg {
   max-width: 1440px;
   padding: 80px 44px;
