--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -24,6 +24,7 @@
 @use "./components/CarouselC";
 @use "./components/RestaurantCard";
 @use "./components/TileCard";
+@use "./components/HomeCarousel";
 
 // Abstracts
 @use "./abstracts/colors";
