--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -25,6 +25,8 @@
 @use "./components/RestaurantCard";
 @use "./components/TileCard";
 @use "./components/HomeCarousel";
+@use "./components/RotateLogo";
+@use "./components/ThemeSlider";
 
 // Abstracts
 @use "./abstracts/colors";
