--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -7,6 +7,7 @@ $mobile-view: 1060px;
   flex-direction: column;
   align-items: center;
   // background-color: c.$bg-color;
+  overflow-x: hidden;
 }
 
 .homeIntroSection {
@@ -220,7 +221,7 @@ $mobile-view: 1060px;
   .homeService-cardSliderContainer {
     width: 50%;
     border-right: 1px solid black;
-    // background-color: lightgreen;
+    padding: 12px;
   }
   .homeService-accordionContainer {
     width: 50%;
