--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -1499,13 +1499,47 @@ swiper-container {
 }
 
 .sliderItemWrapper {
-  background-color: bisque;
-  max-width: 380px;
-  height: 100%;
+  border: 1px solid white;
+  max-width: 328px;
+  aspect-ratio: 0.64/1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 40px;
 }
 .sliderItemWrapper .sliderHeader {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  border-bottom: 1px solid white;
+  margin: 12px;
+  padding-bottom: 8px;
+}
+.sliderItemWrapper .sliderHeader div:nth-of-type(2) {
+  margin: 0 auto;
+}
+.sliderItemWrapper .sliderBody {
+  padding: 24px;
+}
+.sliderItemWrapper .sliderBody__title {
+  color: var(--CM-Cream, #fffcfa);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 128%;
+}
+.sliderItemWrapper .sliderBody__body {
+  color: white;
+  font-family: Poppins;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 166.667% */
+  margin: 20px 0;
+  width: 90%;
+}
+.sliderItemWrapper .sliderBody__body .typo-link {
+  color: white;
 }
 
 .btn-primary {
