--- a/src/scss/components/_ThemeSlider.scss
+++ b/src/scss/components/_ThemeSlider.scss
@@ -1,5 +1,9 @@
 @use "../abstracts/colors" as c;
 
+.mySwiper {
+  // border: solid 1px red;
+}
+
 .themeSliderContainer {
   background-color: c.$black-theme;
   width: 100%;
@@ -18,11 +22,46 @@
 }
 
 .sliderItemWrapper {
-  background-color: bisque;
-  max-width: 380px;
-  height: 100%;
+  border: 1px solid white;
+  max-width: 328px;
+  // height: 90%;
+  aspect-ratio: 0.64/1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 40px;
   .sliderHeader {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    border-bottom: 1px solid white;
+    margin: 12px;
+    padding-bottom: 8px;
+    div:nth-of-type(2) {
+      margin: 0 auto;
+    }
+  }
+  .sliderBody {
+    padding: 24px;
+    &__title {
+      color: var(--CM-Cream, #fffcfa);
+      font-family: Poppins;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 128%;
+    }
+    &__body {
+      color: white;
+      font-family: Poppins;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px; /* 166.667% */
+      margin: 20px 0;
+      width: 90%;
+      .typo-link {
+        color: white;
+      }
+    }
   }
 }
