--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -1500,12 +1500,20 @@ swiper-container {
 
 .sliderItemWrapper {
   border: 1px solid white;
+  border-radius: 10px;
   max-width: 328px;
   aspect-ratio: 0.64/1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
+  position: relative;
+  overflow: hidden;
+}
+.sliderItemWrapper:hover .sliderImage img {
+  filter: grayscale(0);
+  transition: 400ms;
+  transform: scale(1.05);
 }
 .sliderItemWrapper .sliderHeader {
   display: flex;
@@ -1538,8 +1546,25 @@ swiper-container {
   margin: 20px 0;
   width: 90%;
 }
-.sliderItemWrapper .sliderBody__body .typo-link {
+.sliderItemWrapper .sliderBody a {
   color: white;
+}
+.sliderItemWrapper .sliderImage {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+.sliderItemWrapper .sliderImage img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  transition: 400ms;
+  filter: grayscale(2);
 }
 
 .btn-primary {
