--- a/src/scss/components/_ThemeSlider.scss
+++ b/src/scss/components/_ThemeSlider.scss
@@ -1,9 +1,5 @@
 @use "../abstracts/colors" as c;
 
-.mySwiper {
-  // border: solid 1px red;
-}
-
 .themeSliderContainer {
   background-color: c.$black-theme;
   width: 100%;
@@ -23,13 +19,25 @@
 
 .sliderItemWrapper {
   border: 1px solid white;
+  border-radius: 10px;
   max-width: 328px;
   // height: 90%;
   aspect-ratio: 0.64/1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
+  position: relative;
+  overflow: hidden;
+  &:hover {
+    .sliderImage {
+      img {
+        filter: grayscale(0);
+        transition: 400ms;
+        transform: scale(1.05);
+      }
+    }
+  }
   .sliderHeader {
     display: flex;
     justify-content: center;
@@ -59,9 +67,27 @@
       line-height: 20px; /* 166.667% */
       margin: 20px 0;
       width: 90%;
-      .typo-link {
-        color: white;
-      }
+    }
+    a {
+      color: white;
+    }
+  }
+  .sliderImage {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+
+    img {
+      // border-radius: 10px;
+      object-fit: contain;
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      transition: 400ms;
+      filter: grayscale(2);
     }
   }
 }
