--- a/src/scss/components/_TileCard.scss
+++ b/src/scss/components/_TileCard.scss
@@ -44,3 +44,12 @@
     }
   }
 }
+
+@media (max-width: 900px) {
+  .tileCardContainer {
+    flex-direction: column;
+    .tileCard {
+      width: 100%;
+    }
+  }
+}
