--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -1472,6 +1472,12 @@ swiper-container {
   .tileCardContainer .tileCard {
     width: 100%;
   }
+  .tileCard-body__details p:nth-of-type(2) {
+    display: none;
+  }
+  .tileCard-header {
+    padding: 0;
+  }
 }
 .rotatingStarContainer {
   align-self: center;
@@ -1531,16 +1537,15 @@ swiper-container {
 }
 
 .sliderItemWrapper {
-  border: 1px solid white;
   border-radius: 10px;
   max-width: 328px;
   aspect-ratio: 0.64/1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 60px;
   position: relative;
   overflow: hidden;
+  margin: 0 10px 60px;
 }
 .sliderItemWrapper:hover .sliderImage img {
   filter: grayscale(0);
@@ -1590,15 +1595,23 @@ swiper-container {
   z-index: -1;
 }
 .sliderItemWrapper .sliderImage img {
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
   background-position: center;
   transition: 400ms;
-  filter: grayscale(2);
+  filter: grayscale(1);
 }
 
+@media (max-width: 900px) {
+  .sliderHeader {
+    font-size: 14px;
+  }
+  .sliderBody__body {
+    display: none;
+  }
+}
 .btn-primary {
   padding: 16px 32px;
   border: 2px solid #211f1a;
@@ -1788,6 +1801,15 @@ swiper-container {
   line-height: 24px; /* 150% */
 }
 
+@media (max-width: 900px) {
+  .typo-h1 {
+    font-size: 26px;
+    margin-bottom: 0;
+  }
+  .typo-b4 {
+    font-size: 20px;
+  }
+}
 *,
 *::after,
 *::before {
