--- a/src/scss/abstracts/_typography.scss
+++ b/src/scss/abstracts/_typography.scss
@@ -90,3 +90,14 @@
   font-weight: 400;
   line-height: 24px; /* 150% */
 }
+
+@media (max-width: 900px) {
+  .typo-h1 {
+    font-size: 26px;
+    margin-bottom: 0;
+  }
+
+  .typo-b4 {
+    font-size: 20px;
+  }
+}
