--- a/src/scss/components/_ThemeSlider.scss
+++ b/src/scss/components/_ThemeSlider.scss
@@ -27,17 +27,16 @@
 }
 
 .sliderItemWrapper {
-  border: 1px solid white;
+  // border: 1px solid white;
   border-radius: 10px;
   max-width: 328px;
-  // height: 90%;
   aspect-ratio: 0.64/1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 60px;
   position: relative;
   overflow: hidden;
+  margin: 0 10px 60px;
   &:hover {
     .sliderImage {
       img {
@@ -88,15 +87,22 @@
     left: 0;
     right: 0;
     z-index: -1;
-
     img {
-      // border-radius: 10px;
-      object-fit: contain;
+      object-fit: cover;
       width: 100%;
       height: 100%;
       background-position: center;
       transition: 400ms;
-      filter: grayscale(2);
+      filter: grayscale(1);
     }
+  }
+}
+
+@media (max-width: 900px) {
+  .sliderHeader {
+    font-size: 14px;
+  }
+  .sliderBody__body {
+    display: none;
   }
 }
