--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -1604,12 +1604,20 @@ swiper-container {
   filter: grayscale(1);
 }
 
+@media (min-width: 901px) {
+  .themeSliderContainer-slider--mobile {
+    display: none;
+  }
+}
 @media (max-width: 900px) {
+  .themeSliderContainer-slider--mobile {
+    display: block;
+  }
+  .themeSliderContainer-slider--desktop {
+    display: none;
+  }
   .sliderHeader {
     font-size: 14px;
-  }
-  .sliderBody__body {
-    display: none;
   }
 }
 .btn-primary {
