--- a/src/scss/abstracts/_typography.scss
+++ b/src/scss/abstracts/_typography.scss
@@ -93,7 +93,8 @@
 
 @media (max-width: 900px) {
   .typo-h1 {
-    font-size: 26px;
+    font-size: 32px;
+    font-weight: 500;
     margin-bottom: 0;
   }
 
