--- a/src/scss/components/_Accordion.scss
+++ b/src/scss/components/_Accordion.scss
@@ -37,7 +37,7 @@ $mobile-view: 1060px;
 .accordion-content {
   font-size: 16px;
   line-height: 28px;
-  padding-top: 8px;
+  // padding-top: 8px;
   width: 90%;
   max-height: 0;
   color: c.$black-theme;
@@ -49,7 +49,7 @@ $mobile-view: 1060px;
   font-size: 16px;
   line-height: 28px;
   color: c.$black-theme;
-  padding-top: 8px;
+  // padding-top: 8px;
 
   width: 90%;
   height: auto;
