--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -27,6 +27,7 @@
 @use "./components/HomeCarousel";
 @use "./components/RotateLogo";
 @use "./components/ThemeSlider";
+@use "./components/KeynoteSection";
 
 // Abstracts
 @use "./abstracts/colors";
