--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -242,7 +242,8 @@ $mobile-view: 1060px;
 }
 
 .parallaxSection {
-  background-color: c.$bg-color;
+  background-color: #211f1a;
+  background-color: #211f1a;
   width: 100%;
   padding: 140px 24px;
   // background-color: c.$black-theme;
