--- a/src/scss/components/_KeynoteSection.scss
+++ b/src/scss/components/_KeynoteSection.scss
@@ -12,7 +12,7 @@
 
 .keynoteFade {
   opacity: 0;
-  transition: 4000ms;
+  transition: 3000ms;
 }
 
 .keynote-svg {
@@ -73,4 +73,10 @@
   font-weight: 500;
   border-radius: 0px 12px 12px 0px;
   background: var(--CM-Accent, #7feb38);
+}
+
+@media (max-width: 900px) {
+  .subpath {
+    display: none;
+  }
 }
