--- a/src/scss/components/_KeynoteSection.scss
+++ b/src/scss/components/_KeynoteSection.scss
@@ -79,4 +79,12 @@
   .subpath {
     display: none;
   }
+
+  .keynote-svgIcon {
+    margin: 12px 0;
+    img {
+      width: 28px;
+      height: 20px;
+    }
+  }
 }
