--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -1700,6 +1700,13 @@ swiper-container {
   .subpath {
     display: none;
   }
+  .keynote-svgIcon {
+    margin: 12px 0;
+  }
+  .keynote-svgIcon img {
+    width: 28px;
+    height: 20px;
+  }
 }
 .btn-primary {
   padding: 16px 32px;
