--- a/src/scss/components/_KeynoteSection.scss
+++ b/src/scss/components/_KeynoteSection.scss
@@ -87,4 +87,38 @@
       height: 20px;
     }
   }
+
+  .subscribeInput {
+    display: block;
+    padding: 12px 24px;
+    width: 100%;
+    border: none;
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 2px;
+    border-radius: 12px;
+    background: var(--CM-Cream, #fffcfa);
+  }
+
+  .subscribeButton {
+    display: block;
+    padding: 12px 24px;
+    border: none;
+    font-size: 16px;
+    font-weight: 500;
+    border-radius: 12px;
+    background: var(--CM-Accent, #7feb38);
+  }
+
+  .keynote-body {
+    &__mainContent {
+      margin-left: 12px;
+    }
+    &__subContent {
+      div:nth-of-type(1) {
+        max-width: 550px;
+        margin: 0 0 0 12px;
+      }
+    }
+  }
 }
